@@ -655,6 +655,10 @@ gst_ttml_attribute_parse (GstTTMLState *state, const char *ns,
     attr->value.b = gst_ttml_utils_attr_value_is (value, "visible");
     GST_LOG ("Parsed '%s' visibility into visibility=%d", value, attr->value.b);
     break;
+  case GST_TTML_ATTR_OPACITY:
+    attr->value.d = g_ascii_strtod (value, NULL);
+    GST_LOG ("Parsed '%s' opacity into %g", value, attr->value.d);
+    break;
   case GST_TTML_ATTR_SMPTE_IMAGETYPE:
     attr->value.smpte_image_type = gst_ttml_utils_enum_parse (value, SMPTEImageType);
     if (attr->value.smpte_image_type == GST_TTML_SMPTE_IMAGE_TYPE_UNKNOWN) {
